<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Antardhvani</string>
    <string name="title_activity_main">Antardhvani</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="next">TouchProcessingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_movies">Search Movies</string>

    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>

    <string name="title_activity_activity_using_tab_library">SlidingTabLayoutActivity</string>
    <string name="action_tabs_using_library">SlidingTabLayoutExample</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="action_vector_test_activity">VectorTestActivity</string>
    <string name="facebook">Like us on facebook</string>
    <string name="brochure">Download Brochure</string>
    <string name="notice">Important Notice</string>
    <string name="rate">Rate App</string>
    <string name="share">Share App</string>
    <string name="rules">Rules for Competitive Events</string>
    <string name="code">Source code on Github</string>
    <string name="title_activity_splash">Splash</string>

</resources>
