<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="antardhvani.du.ac.in.antardhvani.MainActivity">
    <item android:id="@+id/action_notifications"
        android:title="Notifications"
        android:icon="@drawable/ic_menu_notifications"
        app:showAsAction="always"/>
    <item
        android:id="@+id/facebook"
        android:orderInCategory="100"
        android:title="@string/facebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/rules"
        android:orderInCategory="199"
        android:title="@string/rules"
        app:showAsAction="never" />


    <item
        android:id="@+id/brochure"
        android:orderInCategory="200"
        android:title="@string/brochure"
        app:showAsAction="never" />

    <item
        android:id="@+id/notice"
        android:orderInCategory="300"
        android:title="@string/notice"
        app:showAsAction="never" />


    <item
        android:id="@+id/share"
        android:orderInCategory="500"
        android:title="@string/share"
        app:showAsAction="never" />



    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_touch_intercept_activity"
        android:icon="@drawable/ic_next"
        android:orderInCategory="200"
        android:title="@string/next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tabs_using_library"
        android:orderInCategory="300"
        android:title="@string/action_tabs_using_library"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_vector_test_activity"
        android:orderInCategory="300"
        android:title="@string/action_vector_test_activity"
        app:showAsAction="never" />

     -->


</menu>